#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.50)
AC_INIT(hello, 1.0, sarah@developingprogrammers.com)
AC_CONFIG_SRCDIR([src/hello.h])
AM_INIT_AUTOMAKE   
AM_CONFIG_HEADER([config.h])
AC_CONFIG_FILES([Makefile
	src/Makefile])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_OUTPUT


