AC_INIT(shed.c)
AM_INIT_AUTOMAKE(shed,1.15)
AC_PROG_CC
AC_PROG_INSTALL
CFLAGS="-Wall"
AC_SUBST(CFLAGS)

AC_ARG_ENABLE(debug,   [  --enable-debug          gcc -g],enable_debug=yes)
if test "$enable_debug" = "yes"
then
  CFLAGS="$CFLAGS -g"
fi

AC_ARG_ENABLE(lfs,     [  --enable-lfs            large file support],,enable_lfs=yes)
if test -z "$enable_lfs"
then
  enable_lfs="$enableval"
fi
if test $enable_lfs = "yes"
then
  CFLAGS="$CFLAGS -DSHED_LFS=1 -D_FILE_OFFSET_BITS=64"
else
  CFLAGS="$CFLAGS -DSHED_LFS=0"
fi
echo "large file support: $enable_lfs"

AC_ARG_ENABLE(cygfix,  [  --enable-cygfix         cygwin fix],enable_cygfix=yes)
if test "$enable_cygfix" = "yes"
then
  CFLAGS="$CFLAGS -DSHED_CYGFIX=1"
else
  CFLAGS="$CFLAGS -DSHED_CYGFIX=0"
fi

AC_ARG_ENABLE(nofollow,[  --enable-nofollow       nofollow option],enable_nofollow=yes)
if test "$enable_nofollow" = "yes"
then
  CFLAGS="$CFLAGS -DSHED_NOFOLLOW=1"
else
  CFLAGS="$CFLAGS -DSHED_NOFOLLOW=0"
fi

ERR="Required package missing!"
AC_CHECK_HEADER(ncurses.h,:,AC_MSG_ERROR([$ERR]))
AC_CHECK_HEADER(getopt.h,:,AC_MSG_ERROR([$ERR]))
AC_CHECK_LIB(ncurses,initscr)
AC_CHECK_LIB(m,pow)
AC_OUTPUT(Makefile)
