dnl
dnl  TUN - Universal TUN/TAP device driver.
dnl  Copyright (C) 1999-2000 Maxim Krasnyansky <max_mk@yahoo.com>
dnl
dnl  This program is free software; you can redistribute it and/or modify
dnl  it under the terms of the GNU General Public License as published by
dnl  the Free Software Foundation; either version 2 of the License, or
dnl  (at your option) any later version.
dnl
dnl  This program is distributed in the hope that it will be useful,
dnl  but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
dnl  GNU General Public License for more details.
dnl
dnl  $Id: configure.in,v 1.3 2000/05/04 19:24:53 maxk Exp $
dnl
dnl Process this file with autoconf to produce a configure script.
dnl
AC_INIT()

AC_ARG_ENABLE(debug,
   --enable-debug        Enable debuging,
   AC_DEFINE(TUN_DEBUG, 1)
)

AC_PROG_INSTALL

AC_DEFINE_UNQUOTED(TUN_VER, "$TUN_VER")

AC_OUTPUT(Makefile)
